<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="pro.savichev.planetexpress.logbook.ui.planets.Planet" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="planet"
            type="pro.savichev.planetexpress.logbook.ui.planets.Planet" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:elevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:id="@+id/planetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/planet_property_title_text"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="@{context.getString(planet.nameResId)}"
                        android:textSize="@dimen/planet_name_text_size" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginRight="50dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/planet_image_description"
                        android:src="@{ContextCompat.getDrawable(context, planet.imageResId)}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/color_text"
                        android:textAllCaps="true"
                        android:textColor="@color/planet_property_title_text"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="@dimen/planet_property_title_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{context.getString(planet.colorResId)}"
                        android:textColor="@color/planet_property_text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="@dimen/planet_property_text_size" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:text="@string/composition_text"
                        android:textColor="@color/planet_property_title_text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:textSize="@dimen/planet_property_title_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{context.getString(planet.compositionResId)}"
                        android:textColor="@color/planet_property_text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="@dimen/planet_property_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:text="@string/form_text"
                        android:textColor="@color/planet_property_title_text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:textSize="@dimen/planet_property_title_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{context.getString(planet.formResId)}"
                        android:textColor="@color/planet_property_text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="@dimen/planet_property_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:text="@string/description_text"
                        android:textColor="@color/planet_property_title_text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:textSize="@dimen/planet_property_title_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{context.getString(planet.descriptionResId)}"
                        android:textColor="@color/planet_property_text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="@dimen/planet_property_text_size" />

                </LinearLayout>

            </ScrollView>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>